feat: implement search term processing and project improvements
- Added functionality to remove processed search terms from the search_terms.txt file
- Enhanced error handling and logging throughout the application
- Improved browser instance configuration with proper user agent and language settings
- Added retry mechanism with configurable delay for search queries
- Optimized config file with clear documentation
- Added comprehensive README with setup and usage instructions
- Ensured proper CSV output formatting for scraped data
- Added type safety and improved code organization
- Implemented proper error handling for file operations
- Added progress tracking for search term processing

The application now provides better feedback during execution and maintains state by removing processed terms, making it more robust for long-running scraping tasks.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@types/papaparse": "^5.3.16",
+    "papaparse": "^5.5.3",
     "puppeteer-real-browser": "^1.4.3"
   }
 }
